@@ -3,6 +3,10 @@ Changes and New Features in 3.5 (2020-04-14):
 	most of these revolve around rm.const and its misuse
 	there is a possibility that these issues exist elsewhere
 
+	* predict.crisk3bart now handles missing data with 
+	multiple imputation hot decking: likely potential for 
+	other functions to have similar capability
+
 Changes and New Features in 3.4 (2020-01-27):
 	* removing our early, naive version of gbmm from the NAMESPACE
 	a more comprehensive version is available in our sub-directory
